Changelog of IRClib (IRC client library):

IRClib 1.11 (xx.xx.2008):
 * Added:   IRCUtil.stripColors() which behaves same like the old 
            IRCUtil.parseColors(), but does not remove CTCP_DELIMITERs.
            However, the old parseColors() are not deprecated, because they
            still do something useful.
 * Added:   IRCConnection.setDebug() and IRCConnectin.setDebugWriter()
            add a rudimentary debug output (again, was removed in 0.91).
 * Added:   IRCConnection.getLocalAddress() that returns the socket's local
            address. 
 * Fixed:   IRCUtil.parseColors() decremented i by (j-i) instead of 1 which
            could result in a IndexOutOfBoundsException in the buf.charAt(i)
            line.
 * Fixed:   Javadocs for indicators in IRCConstants; thanks to Johan Gunnarsson.
 * Fixed:   IRCConstants.RPL_AUTHNAME, which is not part of the RFC 1459, had
            the wrong value of 333 and is now fixed (330).

IRClib 1.10 (03.11.2006):
 * Changed: org.schwering.irc.lib.ssl.*. The new package is the new residence 
            of the SSL IRC classes.
            org.schwering.irc.lib.SSLIRCConnection and 
            org.schwering.irc.lib.SSLDefaultTrustManager are deprecated.
 * Added:   The interface IRCConstants contains the reply codes, error codes 
            and mIRC color codes now. The interface is implemented by IRCUtil 
            (thus, accessing the constants via IRCUtil still works) and by 
            IRCEventListener (for less typing work).
 * Changed: The mIRC color code fields in the IRCUtil class (like 
            actionIndicator etc.) are deprecated. The new values are final 
            and written in upper case with underscores (e.g. ACTION_INDICATOR).
 * Changed: IRCEventListeners are fired from-last-to-first.
 * Changed: There's only one release which contains the three licenses:
            GNU LGPL, Eclipse Public License, Apache Software License.

IRClib 1.04-epl (31.03.2006):