@@ -1,14 +1,19 @@
 Changelog of IRClib (IRC client library):
 
-IRClib 1.11 (xx.xx.2008):
+IRClib 1.11 (xx.xx.2010):
  * Added:   IRCUtil.stripColors() which behaves same like the old 
             IRCUtil.parseColors(), but does not remove CTCP_DELIMITERs.
             However, the old parseColors() are not deprecated, because they
             still do something useful.
  * Added:   IRCConnection.setDebug() and IRCConnectin.setDebugWriter()
             add a rudimentary debug output (again, was removed in 0.91).
+ * Added:   IRCConnection.setExceptionHandling() that determines how unexpected
+            exceptions are handled (ignored, printed to debug-stream or wrapped
+            in a RuntimeException and re-thrown). 
  * Added:   IRCConnection.getLocalAddress() that returns the socket's local
-            address. 
+            address.
+ * Fixed:   The onRegistered()-workaround triggered unwanted onRegistered()
+            events. Hopefully this is fixed now.
  * Fixed:   IRCUtil.parseColors() decremented i by (j-i) instead of 1 which
             could result in a IndexOutOfBoundsException in the buf.charAt(i)
             line.
